[gd_scene load_steps=6 format=3 uid="uid://c2nxu7vp5efku"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_5gyju"]
[ext_resource type="AudioStream" uid="uid://d0dx2wsg8nlwk" path="res://sounds/correct.wav" id="2_0rxg7"]
[ext_resource type="AudioStream" uid="uid://dvke7iqa6ebk6" path="res://sounds/incorrect.wav" id="3_too8c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oglug"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l2hxn"]
bg_color = Color(0, 0.498039, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Game" type="Node2D"]
script = ExtResource("1_5gyju")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreMargin" type="MarginContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_right = 123.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 10

[node name="Score" type="Label" parent="UI/Control/ScoreMargin"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -28.5
offset_right = 113.0
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2

[node name="Task" type="Label" parent="UI/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "..."
horizontal_alignment = 1

[node name="Word" type="LineEdit" parent="UI/Control/VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="UI/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_oglug")
theme_override_styles/fill = SubResource("StyleBoxFlat_l2hxn")
max_value = 60.0
show_percentage = false

[node name="Tip" type="HBoxContainer" parent="UI/Control/VBoxContainer"]
layout_mode = 2

[node name="LeftExpand" type="Control" parent="UI/Control/VBoxContainer/Tip"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TipLink" type="LinkButton" parent="UI/Control/VBoxContainer/Tip"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2

[node name="RightExpand" type="Control" parent="UI/Control/VBoxContainer/Tip"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0

[node name="TipTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0rxg7")

[node name="IncorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_too8c")

[connection signal="pressed" from="UI/Control/VBoxContainer/Tip/TipLink" to="." method="_on_tip_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TipTimer" to="." method="_on_tip_timer_timeout"]
